# Finance-telegram-bot

./: .flake8  .gitignore  Dockerfile  LICENSE  docker-compose.yaml  pyproject.toml  readme.md  requirements.in  requirements.txt
.github/workflows/: ci.yaml
alembic/: alembic.ini
alembic/migrations/: env.py
alembic/migrations/versions/: 6fa71d6c29d8_init.py  7ab38ff3ef21_email_field.py  8ca044247220_is_active_field.py  9594cf3d5f56_locale_field.py  d8da83b12035_init.py
core/: buttons.py  telegram_api.py
core/config/: createdb.sql
locales/: finance.pot
locales/be/LC_MESSAGES/: finance.mo  finance.po
locales/en/LC_MESSAGES/: finance.mo  finance.po
locales/ru/LC_MESSAGES/: finance.mo  finance.po
scripts/: entrypoint.sh
src/: celery_app.py  config.py  database.py  exception.py  i18n.py  main.py  redis_manager.py
src/accounting/: models.py
src/middleware/: accounting.py  general_handlers.py  service.py  user.py
src/report/: diagram.py  email_send.py  headers.py  table.py
src/telegram/: buttons.py  category_handlers.py  common_handlers.py  language_handlers.py  main_handlers.py  messages.py  report_handlers.py  settings_handlers.py  states.py  telegram_api.py  utils.py
src/user/: models.py
